---
source: tests/unparse_tests.rs
description: "Statement: tests/sql/ddl/create_function.sql:1"
expression: prettified
---
CREATE OR REPLACE FUNCTION auth.login(
    usr varchar(16),
    pwd varchar(16),
    OUT user_id int,
    OUT first_name varchar(32),
    OUT last_name varchar(32)
)
LANGUAGE sql
AS $$
    SELECT u.id, u.first_name, u.last_name FROM auth.users u WHERE u.name = usr AND crypt(pwd, u.password) = u.password AND u.validity @> CURRENT_DATE;
$$
